fix blank between </ul> and navlink add auto-transform style for webkit, but not used in code due to a issue "blank exist after image got transformed" rewrite fetch to support all parameters, change deadline=10 change /smth/ in navlink to / fix gabage char in first post due to (-1)==true rewrite \n replacement to <br/> add expand reference groups link in each post in normal content and Heji content fix bottom navlink to show the jump pages at bottom

--- a/static/my.css
+++ b/static/my.css
@@ -80,6 +80,7 @@ h2 {
 ul {	   
 	padding: 0;	   
 	margin-top:0;
+    margin-bottom:0;
 	
 	font-size:14px;
 	font-family: Helvetica;
@@ -125,6 +126,11 @@ ul {
 	padding-left: 17px;
 	margin-left: 15px;
 	border-left: 1px solid #929697;
+}
+
+.auto300 {
+    -webkit-transform: scale(0.625);
+    -webkit-transform-origin: top left;
 }
 
 li {	
